ingress-rule.yaml
# kubectl create secret tls ingress-secret --key mykey.key --cert STAR_singhritesh85_com.crt -n three-tier
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dexter-ingress
  namespace: three-tier
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
#  - hosts:
#    - dexter.singhritesh85.com
  - secretName: ingress-secret
  rules:
  - host: suniyachiyena.singhritesh85.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: threetierapp-folo
            port:
              number: 80
        pathType: Prefix
